Added commands CompareAndSet and AddElement. Added type Executor and support of key with all executed commands (modified env-files to this)
